--- a/php54-apache-mysql-dev/Dockerfile
+++ b/php54-apache-mysql-dev/Dockerfile
@@ -29,7 +29,7 @@ COPY php.ini /usr/local/etc/php/
 # IMPORTANT: These settings are not recommended for production servers!
 RUN pecl install xdebug; \
     echo 'zend_extension="/usr/local/lib/php/extensions/no-debug-non-zts-20100525/xdebug.so"' > /usr/local/etc/php/conf.d/xdebug.ini; \
-    echo ;xdebug.scream=1 >> /usr/local/etc/php/conf.d/xdebug.ini; \
+    echo ';xdebug.scream=1' >> /usr/local/etc/php/conf.d/xdebug.ini; \
     echo xdebug.remote_enable=1 >> /usr/local/etc/php/conf.d/xdebug.ini; \
     echo xdebug.remote_autostart=1 >> /usr/local/etc/php/conf.d/xdebug.ini; \
     echo xdebug.remote_connect_back=1 >> /usr/local/etc/php/conf.d/xdebug.ini; \
