--- a/php54-apache-mysql-dev/Dockerfile
+++ b/php54-apache-mysql-dev/Dockerfile
@@ -41,6 +41,9 @@ RUN pecl install xdebug; \
 # enable mod_rewrite
 RUN a2enmod rewrite
 
+# make the webroot a volume
+VOLUME /var/www/html/
+
 # In images building upon this image, copy the src/ directory to the webserver
 # root and correct the owner.
 ONBUILD COPY src/ /var/www/html/
