Fix MySQL Dockerfile

--- a/mysql-56/Dockerfile
+++ b/mysql-56/Dockerfile
@@ -11,7 +11,7 @@ RUN apt-get update \
 VOLUME /var/lib/automysqlbackup
 
 COPY docker-env-vars.d/* /envars.d/
-COPY docker-entrypoint-initdb.d/*.{sh,sql} /docker-entrypoint-initdb.d/
+COPY docker-entrypoint-initdb.d/* /docker-entrypoint-initdb.d/
 
 # patch the entrypoint file to source (insert after shebang line)
 RUN awk '/^#!/ { \
@@ -26,6 +26,6 @@ RUN awk '/^#!/ { \
 # for images building upon this image, auto-copy config, env files, and entrypoint scripts
 ONBUILD COPY mysql-conf.d/* /etc/mysql/conf.d/
 ONBUILD COPY docker-env-vars.d/* /envars.d/
-ONBUILD COPY docker-entrypoint-initdb.d/*.{sh,sql} /docker-entrypoint-initdb.d/
+ONBUILD COPY docker-entrypoint-initdb.d/* /docker-entrypoint-initdb.d/
 
 #EOF
