--- a/mysql-56-custom/docker-compose.yml
+++ b/mysql-56-custom/docker-compose.yml
@@ -5,11 +5,12 @@ db-mysql:
     build: .
 #    image: fbender/mysql-56
     restart: always
-    volumes_from: volume-db-mysql
+    volumes_from:
+        - volume-db-mysql
     
 volume-db-mysql:
     container_name: volume-db-mysql
     image: fbender/mysql-56
-    entrypoint: /bin/echo fbender/mysql-56 Data-only volume container for: db-mysql
+    entrypoint: /bin/echo fbender/mysql-56 Data-only volume container for db-mysql
 
 # EOF
