Fix PHP-5.4-Apache-MySQL image entrypoint

--- a/php54-apache-mysql-dev/Dockerfile
+++ b/php54-apache-mysql-dev/Dockerfile
@@ -62,4 +62,9 @@ ENV UPSTREAM_NAME web-site
 #COPY src-extra/ /var/www/html/extra/
 #RUN chown -R www-data:www-data /var/www/html/extra
 
+# Entrypoint file tries to fix permissions, again
+COPY entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
+ENTRYPOINT ["/entrypoint.sh"]
+
 #EOF
