--- a/php54-apache-mysql/Dockerfile
+++ b/php54-apache-mysql/Dockerfile
@@ -50,6 +50,7 @@ ENV UPSTREAM_NAME web-site
 
 # Entrypoint file tries to fix permissions, again
 COPY entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
 ENTRYPOINT ["/entrypoint.sh"]
 
 #EOF
