--- a/php56-apache-mysql/Dockerfile
+++ b/php56-apache-mysql/Dockerfile
@@ -13,7 +13,7 @@ RUN apt-get update && apt-get install -y \
         libxml2-dev \
         zlib1g-dev \
     && docker-php-ext-install iconv mbstring mcrypt soap sockets zip \
-    && docker-php-ext-configure gd --enable-gd-native-ttf --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ --with-png-dir=/usr/include/ --with-zlib-dir=/usr/include/ \
+    && docker-php-ext-configure gd --enable-gd-native-ttf --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
     && docker-php-ext-install gd \
     && docker-php-ext-configure mysql --with-mysql=mysqlnd \
     && docker-php-ext-install mysql
