Update nginx-custom image with new upstream capabilities
Since the initial release of the nginx-custom image, the upstream
project included new default capabilities that are now used by this
image, specifically: IPv6 support, per-virtual host configuration files.

Also, documentation was improved and sensible default configurations as
well as example configurations added.

--- a/nginx-proxy-custom/docker-compose.yml
+++ b/nginx-proxy-custom/docker-compose.yml
@@ -1,10 +1,14 @@
 proxy:
     container_name: proxy
     image: fbender/nginx-proxy-custom
+#    build: .
     restart: always
+    environment:
+        - ENABLE_IPV6=true
     ports:
         - "80:80"
     volumes:
         - /var/run/docker.sock:/tmp/docker.sock:ro
+        - /etc/nginx/vhost.d:/etc/nginx/vhost.d:ro
         - /etc/nginx/sites-enabled:/etc/nginx/sites-enabled:ro
 #EOF
